--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Manifeste du Contemplateur - Terminal 90s</title>
+<title>Manifeste du Contemplateur d’Art</title>
 <style>
   body {
     margin: 0;
@@ -15,29 +15,32 @@
   }
 
   .container {
-    max-width: 800px;
+    max-width: 900px;
     margin: 0 auto;
   }
 
+  h1 {
+    font-size: 3em;
+    margin-bottom: 40px;
+    text-decoration: underline;
+  }
+
   .paragraph {
-    opacity: 0;
+    opacity: 1; /* Toujours visible */
     transition: opacity 1s ease-in-out;
     white-space: pre-wrap;
     margin: 20px 0;
   }
 
-  .paragraph.active {
-    opacity: 1;
-  }
-
   h2 {
-    font-size: 1.5em;
+    font-size: 1.8em;
     margin-bottom: 0.5em;
   }
 
   p {
     font-size: 1.2em;
     line-height: 1.6;
+    text-align: left;
   }
 
   .cursor {
@@ -47,6 +50,7 @@
     margin-left: 5px;
     animation: blink 1s infinite;
     height: 1.2em;
+    vertical-align: bottom;
   }
 
   @keyframes blink {
@@ -59,7 +63,9 @@
 
 <div class="container">
 
-  <div class="paragraph active">
+  <h1>Manifeste du Contemplateur d’Art</h1>
+
+  <div class="paragraph">
     <h2>1. De la présence</h2>
     <p>Je suis celui qui s’arrête. Dans un monde où tout s’accélère, je revendique la lenteur comme acte fondateur. Devant l’œuvre, je suspends l’utilité, l’urgence et la fonction. Je n’attends rien : je me rends disponible.</p>
   </div>
@@ -113,23 +119,13 @@
 
 </div>
 
-<!-- Son -->
+<!-- Son de frappe -->
 <audio id="keypress" src="https://www.soundjay.com/button/sounds/button-16.mp3" preload="auto"></audio>
 
 <script>
 const paragraphs = document.querySelectorAll('.paragraph');
-let currentIndex = 0;
-const delay = 9000; // 9 secondes par paragraphe
 
-function showNextParagraph() {
-  paragraphs[currentIndex].classList.remove('active');
-  currentIndex = (currentIndex + 1) % paragraphs.length;
-  paragraphs[currentIndex].classList.add('active');
-}
-
-setInterval(showNextParagraph, delay);
-
-// Effet de frappe + son
+// Optionnel : effet de frappe + son sur tous les paragraphes
 paragraphs.forEach(p => {
   const audio = document.getElementById('keypress');
   const originalText = p.querySelector('p').innerText;
@@ -148,11 +144,7 @@ paragraphs.forEach(p => {
     }
   }
 
-  p.addEventListener('transitionstart', () => {
-    p.querySelector('p').innerText = '';
-    i = 0;
-    type();
-  });
+  type();
 });
 </script>
 
