--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Manifeste du Contemplateur d’Art</title>
+<title>MANIFESTE DU CONTEMPLATEUR D'ART</title>
 <style>
   body {
     margin: 0;
-    padding: 40px;
+    padding: 50px;
     background-color: #000;
     color: #00FF00;
     font-family: "Courier New", Courier, monospace;
@@ -63,55 +63,55 @@
 
 <div class="container">
 
-  <h1>Manifeste du Contemplateur d’Art</h1>
+  <h1>MANIFESTE DU CONTEMPLATEUR D'ART</h1>
 
   <div class="paragraph">
-    <h2>1. De la présence</h2>
+    <h2>1. Présence</h2>
     <p>Je suis celui qui s’arrête. Dans un monde où tout s’accélère, je revendique la lenteur comme acte fondateur. Devant l’œuvre, je suspends l’utilité, l’urgence et la fonction. Je n’attends rien : je me rends disponible.</p>
   </div>
 
   <div class="paragraph">
-    <h2>2. De la rencontre</h2>
+    <h2>2. Rencontre</h2>
     <p>Toute œuvre est une énigme ouverte. En la regardant, je ne cherche pas à la posséder, mais à la rencontrer. La contemplation n’est pas réception passive : c’est une mise en relation, une tension vivante entre deux présences — celle de l’œuvre et la mienne.</p>
   </div>
 
   <div class="paragraph">
-    <h2>3. De l’interprétation</h2>
+    <h2>3. Interprétation</h2>
     <p>Je reconnais que chaque regard est singulier. Je rejette l’idée qu’il n’existe qu’une seule lecture juste. Je revendique mon droit à la subjectivité, à l’émotion, à la résonance intime — sans jamais les ériger en vérité universelle.</p>
   </div>
 
   <div class="paragraph">
-    <h2>4. De la disponibilité</h2>
+    <h2>4. Disponibilité</h2>
     <p>Je m’ouvre à l’œuvre avant la connaissance. Je laisse les concepts venir après l’expérience et non l’inverse. La contemplation commence par le corps : par les yeux, les souffles, les silences. La pensée suit — non pour dominer, mais pour éclairer.</p>
   </div>
 
   <div class="paragraph">
-    <h2>5. De la réciprocité</h2>
+    <h2>5. Réciprocité</h2>
     <p>« C’est le regardeur qui fait l’œuvre », dit-on. J’ajoute : l’œuvre me fait aussi. Chaque rencontre transforme imperceptiblement la manière dont je vois, dont je sens, dont j’habite le monde. La contemplation est une co-création métabolique.</p>
   </div>
 
   <div class="paragraph">
-    <h2>6. Du temps intérieur</h2>
+    <h2>6. Digestion</h2>
     <p>Je refuse l’instantanéité imposée. Je reconnais à l’œuvre le droit d’exiger du temps, de la patience, de la maturation. Comprendre est parfois immédiat, mais souvent, cela germe en silence, longtemps après le départ.</p>
   </div>
 
   <div class="paragraph">
-    <h2>7. De la résistance</h2>
+    <h2>7. Résistance</h2>
     <p>Contempler, aujourd’hui, est un acte de résistance. Contre la vitesse. Contre la saturation visuelle. Contre l’oubli de la profondeur. Je défends le regard lent, attentif, précis, comme un geste politique et existentiel.</p>
   </div>
 
   <div class="paragraph">
-    <h2>8. De l’humilité</h2>
+    <h2>8. Humilité</h2>
     <p>Je me présente devant l’œuvre sans certitude, sans surplomb. Je reconnais ce qui m’échappe. L’incompréhension n’est pas un échec mais un espace de liberté où la pensée peut se déplacer.</p>
   </div>
 
   <div class="paragraph">
-    <h2>9. De la continuité du regard</h2>
+    <h2>9. Souvenir</h2>
     <p>La contemplation ne s’arrête pas lorsque je quitte l’œuvre. Elle se poursuit dans la mémoire, dans l’imaginaire, dans la manière dont mes gestes s’altèrent. Chaque rencontre est une semence déposée dans le regard.</p>
   </div>
 
   <div class="paragraph">
-    <h2>10. De la joie</h2>
+    <h2>10. Joie</h2>
     <p>Enfin, j’affirme que contempler est une source de joie profonde : la joie d’être traversé par quelque chose qui me dépasse, la joie de sentir le monde autrement, la joie de percevoir, un instant, la fragile splendeur du réel.</p>
   </div>
 
