--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ Et que l’être écoute.</p>
 
   <!-- Signature -->
   <p style="margin-top:30px; font-size:18px; opacity:0.8; font-style:italic; text-align:center;">
-    — Alexandre ose A
+    — Doryan Rosenbaum
   </p>
 
   <!-- INFOLETTRE -->
